// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestStepViewTest render snapshot matches with manual false and scanning is finished 1`] = `
"<div className=\\"test-step-view\\">
  <div className=\\"test-step-title-container\\">
    <h3 data-automation-id=\\"requirement-title-Test Step Test Name\\" className=\\"test-step-view-title\\">
      Test Step Test Name
      <GuidanceTags deps={[undefined]} links={{...}} />
    </h3>
    <ContentPanelButton deps={[undefined]} reference={[undefined]} iconName=\\"info\\" contentTitle=\\"Test Step Test Name\\">
      Info &amp; examples
    </ContentPanelButton>
  </div>
  <CollapsibleComponent header={{...}} content={{...}} contentClassName=\\"testStepInstructions\\" />
  <div role=\\"alert\\" aria-live=\\"polite\\" aria-label=\\"Scan Complete\\" />
  <h3 className=\\"test-step-instances-header\\">
    Instances
  </h3>
  <AssessmentInstanceTable instancesMap={{...}} assessmentInstanceTableHandler={{...}} assessmentNavState={{...}} renderInstanceTableHeader={[undefined]} getDefaultMessage={[undefined]} assessmentDefaultMessageGenerator={[undefined]} hasVisualHelper={true} />
</div>"
`;

exports[`TestStepViewTest render, variable part for assisted test 1`] = `
"<div className=\\"test-step-view\\">
  <div className=\\"test-step-title-container\\">
    <h3 data-automation-id=\\"requirement-title-Test Step Test Name\\" className=\\"test-step-view-title\\">
      Test Step Test Name
      <GuidanceTags deps={[undefined]} links={{...}} />
    </h3>
    <ContentPanelButton deps={[undefined]} reference={[undefined]} iconName=\\"info\\" contentTitle=\\"Test Step Test Name\\">
      Info &amp; examples
    </ContentPanelButton>
  </div>
  <CollapsibleComponent header={{...}} content={{...}} contentClassName=\\"testStepInstructions\\" />
  <h3 className=\\"test-step-instances-header\\">
    Instances
  </h3>
  <AssessmentInstanceTable instancesMap={{...}} assessmentInstanceTableHandler={{...}} assessmentNavState={{...}} renderInstanceTableHeader={[undefined]} getDefaultMessage={[undefined]} assessmentDefaultMessageGenerator={[undefined]} hasVisualHelper={true} />
</div>"
`;
